pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingTypeConstraintListDelimiter.pkl
res1: String(!isEmpty, length < 5 = "abc"
res2 = 42
